ReSharper.FSharp/test/data/parsing/errors/Module member - Open 01.fs
open System
f type
open System